# bevy_bird

./: .gitignore  Cargo.toml  Makefile  index.html  package-lock.json  package.json
assets/shaders/: background.wgsl  bevy_mode.wgsl  hills.wgsl
game/: Cargo.toml
game/src/: hills.rs  lib.rs  player.rs
ios/: Cargo.toml
ios/bevy_bird_ios.xcodeproj/: project.pbxproj
ios/bevy_bird_ios.xcodeproj/xcshareddata/xcschemes/: bevy_bird_ios_debug.xcscheme  bevy_bird_ios_release.xcscheme
ios/ios-src/: Info.plist
ios/src/: lib.rs
src/: background.rs  bevy_player.rs  hills.rs  main.rs  player.rs
web/: index.html
